[metadata]
name = feincms_elephantblog
version = attr: elephantblog.__version__
description = A blog for FeinCMS
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feincms/feincms-elephantblog/
author = Simon Baechler
author_email = sb@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=3.2
    FeinCMS>=22.0
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage
    factory-boy

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *elephantblog*
omit =
    *migrations*
    *migrate*
    *tests*
    *.tox*
